feat: add interface for retrieving token information